--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "concurrently \"serve build/\" \"npm run build:watch\"",
     "build": "jsdoc --configure ./docs/jsdoc.json",
     "build:clean": "rm -rf ./build",
-    "build:watch": "watch \"npm run build:clean && npm run build\" lib docs \"node_modules/@athombv/jsdoc-template\""
+    "build:watch": "watch \"npm run build:clean && npm run build\" lib docs \"node_modules/@athombv/jsdoc-template\"",
+    "typings:generate": "tsc"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,8 @@
   "homepage": "https://github.com/athombv/node-zigbee-clusters#readme",
   "devDependencies": {
     "@athombv/jsdoc-template": "^1.6.1",
+    "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.0",
+    "@types/node": "^12.20.55",
     "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-config-athom": "^2.1.0",
@@ -38,8 +41,10 @@
     "jsdoc-ts-utils": "^2.0.0",
     "mocha": "^7.2.0",
     "serve": "^11.3.1",
+    "typescript": "^4.7.4",
     "watch": "^1.0.2"
   },
+  "types": "types/index.d.ts",
   "dependencies": {
     "@athombv/data-types": "^1.0.6",
     "debug": "^4.1.1"
